add thai pop song hits

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -108,6 +108,15 @@
       "contributions": [
         "content"
       ]
+    },
+     {
+      "login": "beforesecond",
+      "name": "Patcharapon Chatsomboonchai",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/40176612?s=460&u=a5e7c2835415ad8ebcebacb7cf70d748e0e28c81&v=4",
+      "profile": "https://github.com/beforesecond",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
