--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -207,6 +207,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "rygenzx",
+      "name": "Rigen Maulana",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/63197023?s=460&u=c41dbc84e13d9f78485ffc72d212e05cdeb04976&v=4",
+      "profile": "https://github.com/rygenzx",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
