add one sad song to list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,6 +20,15 @@
       ]
     },
     {
+      "login": "atrem13",
+      "name": "Merta Yoga",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/31754826?v=4",
+      "profile": "https://github.com/atrem13/",
+      "contributions": [
+        "content"
+      ]
+    },
+    {
       "login": "pirey",
       "name": "Yeri Pratama",
       "avatar_url": "https://avatars3.githubusercontent.com/u/10344542?v=4",
