add playlist acoustic

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -252,6 +252,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "noviyana12",
+      "name": "Noviyana",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/54648155?s=400&u=e43d13c433e40f9594e88aa60ef758c2afe25fc1&v=4",
+      "profile": "https://github.com/noviyana12/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
