Add my content in your file

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -351,6 +351,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "pjyn-dzgn",
+      "name": "PJYN DZGN",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/72155599?s=460&u=6a27cc73286b38e3a44a66d74cd6fcd8f25d8012&v=4",
+      "profile": "https://github.com/pjyn-dzgn",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
