--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -450,6 +450,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "kondang007",
+      "name": "Kondang dermawan",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/58141964?v=4",
+      "profile": "https://github.com/winarnokondang",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
