docs: update README.md [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -486,7 +486,16 @@
       "contributions": [
         "content"
       ]
-    }
+    },
+    {
+      "login": "kouseina",
+      "name": "Daffa Putera Kouseina",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/56005648?v=4",
+      "profile": "https://github.com/kouseina",
+      "contributions": [
+        "content"
+      ]
+    },
   ],
   "contributorsPerLine": 7,
   "skipCi": true
