add playlist by bangadam.dev

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -306,6 +306,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "bangadam.dev",
+      "name": "bangadam.dev",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/18278184?v=4",
+      "profile": "https://github.com/bangada.dev",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
