--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "your-fav-playlist",
+  "name": "awesome-music-playlist",
   "version": "1.0.0",
   "main": "N/a",
-  "repository": "https://github.com/satyawikananda/your-fav-playlist.git",
+  "repository": "https://github.com/satyawikananda/awesome-music-playlist.git",
   "scripts": {
-    "build": "fiddly"
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
-  "author": "satyawikananda <satyawikananda456@gmail.com>",
+  "author": "satyawikananda",
   "license": "MIT",
   "devDependencies": {
     "all-contributors-cli": "^6.17.4",
-    "fiddly": "^0.9.1"
+    "prettier": "^2.4.1",
+    "vitepress": "^0.18.1"
   }
 }
