--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -702,6 +702,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "lenfaire",
+      "name": "Eky",
+      "avatar_url": "https://avatars.githubusercontent.com/u/73016312?v=4",
+      "profile": "https://github.com/lenfaire",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
