--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -846,6 +846,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "sgitwhyd",
+      "name": "sgitwhyd",
+      "avatar_url": "https://avatars.githubusercontent.com/u/44634025?v=4",
+      "profile": "https://github.com/sgitwhyd",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
