Add Wahyu Hidayat to contributors list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -38,6 +38,15 @@
       ]
     },
     {
+      "login": "wahyu",
+      "name": "Wahyu Hidayat",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/10344542?v=4",
+      "profile": "http://github.com/dedsec11",
+      "contributions": [
+        "content"
+      ]
+    },
+    {
       "login": "supryantowp",
       "name": "Supryanto Widadi Putra",
       "avatar_url": "https://avatars3.githubusercontent.com/u/52796494?v=4",
